# Project_Mycobot_280pi_simulation

./: README.md
mycobot/workspace/: traj_log.csv
mycobot/workspace/install/: local_setup.sh  setup.sh
mycobot/workspace/install/mycobot280/share/mycobot280/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
mycobot/workspace/install/mycobot280/share/mycobot280/launch/: mycobot_280_gazebo.launch.py  mycobot_280_world.launch.py
mycobot/workspace/install/mycobot280/share/mycobot280/urdf/: mycobot_280_gazebo(0)  mycobot_280_gazebo.urdf
mycobot/workspace/install/mycobot280_pi/lib/mycobot280_pi/: log_joint_data.py  python_node.py
mycobot/workspace/install/mycobot280_pi/share/mycobot280_pi/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
mycobot/workspace/install/mycobot280_pi/share/mycobot280_pi/launch/: mycobot.launch.py  mycobot_280_gazebo.launch.py  mycobot_280_world.launch.py
mycobot/workspace/install/mycobot280_pi/share/mycobot280_pi/worlds/: default.world
mycobot/workspace/log/: latest_build
mycobot/workspace/src/mycobot280_pi/: CMakeLists.txt  package.xml
mycobot/workspace/src/mycobot280_pi/launch/: mycobot280_pi.launch.py
mycobot/workspace/src/mycobot280_pi/scripts/: move_mycobot.py
mycobot/workspace/src/mycobot280_pi/urdf/: mycobot_280_gazebo.urdf
